[Wasm-GC] Fix handling of bottom type in struct ops https://bugs.webkit.org/show_bug.cgi?id=268870

Reviewed by Justin Michaud.

The parsing of struct types for the reference argument of various struct
operations relied on checking for a type index in the type to check validity.
This is too conservative, as the bottom type exists and values of bottom
inhabit all types in the hiearchy.

This patch corrects the validation check to accommodate bottom.

* JSTests/wasm/gc/arrays.js:
(testArrayGet):
* JSTests/wasm/gc/structs.js:
* Source/JavaScriptCore/wasm/WasmFunctionParser.h:
(JSC::Wasm::FunctionParser<Context>::parseStructFieldManipulation):

Canonical link: https://commits.webkit.org/274556@main